# ECOMMERCE-MICROSERVICES

./: .gitignore
cameo/: .dockerignore  .env.example  .gitignore  CAMEO_IMPLEMENTATION_GUIDE.md  CAMEO_NEURAL_FLOW_AND_TEST_CASES.md  DEMO_PROMPTS.md  Dockerfile  EVALUATION_REPORT.md  PROJECT_DOSSIER.md  PROJECT_DOSSIER_READABLE.md  README.md  compose.yaml  pyproject.toml  requirements.txt  tmp_curated_cases.py
cameo/artifacts/: cameo.db  eval_metrics.json  eval_metrics_clean.json  realistic_eval_results.json  response_safety_results.json
cameo/cameo/: __init__.py
cameo/cameo/api/: config.py  main.py  store.py
cameo/cameo/core/data/: dataset.py
cameo/cameo/core/inference/: pipeline.py
cameo/cameo/core/models/: encoders.py  fusion.py  heads.py  response.py
cameo/cameo/core/preprocess/: image.py  text.py
cameo/data/: presentation_eval_manifest.csv  presentation_manifest.csv  presentation_train_manifest.csv  realistic_eval_cases.csv  response_safety_cases.csv  sample_manifest.csv
cameo/outputs/cameo_presentation/: narrative_plan.md  output.pptx
cameo/scripts/: create_eval_split.py  evaluate_models.py  evaluate_realistic_cases.py  export_onnx.py  generate_presentation_data.py  predict_cli.py  run_response_safety_checks.py  train_cached_heads.py  train_multimodal.py
cameo/tests/: test_api.py  test_core_units.py  test_pipeline_shapes.py  test_response_safety.py
cameo/ui/: index.html  package-lock.json  package.json  tsconfig.json
cameo/ui/src/: App.tsx  api.ts  styles.css  types.ts
ecommerce-microservices/: .dockerignore  .env.example  .gitignore  (+4 more)
(+30 files in other folders)
