[project]
name = "cameo"
version = "0.1.0"
description = "Context-Aware Multimodal Emotion & Intent Engine"
authors = [{name = "CAMEO"}]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "timm>=0.9",
  "transformers>=4.39",
  "tokenizers>=0.15",
  "sentencepiece>=0.2.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "Pillow>=10.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "onnxruntime>=1.17",
  "python-multipart>=0.0.9",
  "aiofiles>=23.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
